# yapi-next

./: .dockerignore  .gitignore  .impeccable.md  .npmignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  plan.md  skills-lock.json  tsconfig.base.json
apps/api/: package-lock.json  package.json
apps/debugger/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/debugger/src-tauri/: Cargo.toml  tauri.conf.json
apps/debugger/src-tauri/capabilities/: default.json
apps/debugger/src-tauri/icons/: icon.icns
apps/debugger/src-tauri/src/: capture.rs  lib.rs  main.rs
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
common/: HandleImportData.js
docs/: debugger-bruno-gap.md  debugger-workspace-format.md  performance-benchmark.md  rewrite-cutover-runbook.md
docs/devops/: index.md
docs/documents/: plugin-dev.md  redev.md
exts/yapi-plugin-export-data/: controller.js
exts/yapi-plugin-export-swagger2-data/: client.js  controller.js
exts/yapi-plugin-gen-services/: controller.js
exts/yapi-plugin-import-swagger/: client.js  run.js
reports/: next-self-assess-20260305-115820.json  next-self-assess-20260306-211430.json  next-self-assess-20260424-202504.json
scripts/: check-web-legacy-styles.mjs  debugger-runner.js  debugger-runner.ts  restore-mongo.sh  self-assess-next-api.sh  smoke-next-api.sh  start-next.sh
scripts/perf/: bench-export.js  bench-roundtrip.js  utils.js
server/: app.js  router.js
server/controllers/: base.js  interface.js  open.js  (+2 more)
test/: openapi-import.test.js
(+375 files in other folders)
